--- a/css/mescss/typography.css
+++ b/css/mescss/typography.css
@@ -2,7 +2,7 @@
 
 body {
     background: white;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: 'Habibi', sans-serif;
     font-size: 16px;
     line-height: 1.6;
     margin: 0 20px;
@@ -10,5 +10,5 @@ body {
 
 a {
     text-decoration: none;
-    color: tomato;
+    color: black;
 }
