--- a/css/mescss/accueil.css
+++ b/css/mescss/accueil.css
@@ -10,7 +10,7 @@ body {
     margin: 0;
 }
 .logo img {
-    z-index: 4;
+    z-index: 1;
     position: absolute;
     top: 10px;
     left: 18px;
@@ -28,4 +28,32 @@ body {
     right: 131px;
     font-size: 12px;
     color: white;
+}
+
+.image1 img{
+    position: absolute;
+    top: 100px;
+}
+
+.intro {
+    position: absolute;
+    font-size: 18px;
+    color: white;
+    top: 436px;
+    right: 18px;
+    text-align: center;
+}
+.intro2 {
+    position: absolute;
+    font-size: 14px;
+    color: white;
+    top: 533px;
+    right: 18px;
+    font-weight: bold;
+    text-align: center;
+}
+.image3 {
+    position: absolute;
+    top: 599px;
+    right: 20px;
 }
