page article scientifique fini hormis le liens à l'article

--- a/css/mescss/Solutions.css
+++ b/css/mescss/Solutions.css
@@ -206,14 +206,14 @@ body {
     top: 3800px;
     margin-left: 40px;
 }
-.tex-clic1_1 p {
+.tex-clic-s1 p {
     position: absolute;
     top: 3795px;
     color: white;
     text-decoration: underline;
-    margin-left: 108px;
+    margin-left: 114px;
 }
-.tex-clic2_2 p {
+.tex-clic-s2 p {
     position: absolute;
     top: 3830px;
     color: white;
