--- a/css/mescss/article-scientifique.css
+++ b/css/mescss/article-scientifique.css
@@ -260,14 +260,14 @@ body {
 .bouton img {
     position: absolute;
     top: 3900px;
-    margin-left: 40px;
+    margin-left: 48px;
 }
-.tex-clic1_1 p {
+.tex-clic-as1 p {
     position: absolute;
-    top: 3895px;
+    top: 3902px;
     color: white;
     text-decoration: underline;
-    margin-left: 108px;
+    margin-left: 144px;
 }
 
 /*Footer*/
